feat(core): web3 1.2.2

--- a/packages/core/src/templates/artifacts.handlebars
+++ b/packages/core/src/templates/artifacts.handlebars
@@ -1,7 +1,7 @@
 /*
  * This file is auto-generated using generate-artifacts script. Any changes will be reverted
  */
-import {ABIDefinition as AbiItem} from "web3/eth/abi";
+import {AbiItem} from "web3-utils";
 
 {{#each files}}
 import * as {{capitalize this.name}}Artifact from "@joincivil/artifacts/v1/{{capitalize this.name}}.json";
