--- a/packages/core/src/templates/contract/multisigproxy.handlebars
+++ b/packages/core/src/templates/contract/multisigproxy.handlebars
@@ -6,7 +6,7 @@
 /* tslint:disable:variable-name */
 
 import { isDefined, bindNestedAll } from "@joincivil/utils";
-import {Tx as TransactionConfig} from "web3/eth/types";
+import {TransactionConfig} from "web3-core";
 
 import { createTwoStepSimple } from "../../utils/contracts";
 import { BaseMultisigProxy, MultisigProxyTransaction } from "../../multisig/basemultisigproxy";
