--- a/packages/core/src/templates/contract/contract.handlebars
+++ b/packages/core/src/templates/contract/contract.handlebars
@@ -8,8 +8,8 @@ import { DecodedLogEntryEvent, DecodedLogEntry, DecodedTransactionReceipt } from
 // tslint:enable:no-unused-variable
 import "rxjs/add/operator/distinctUntilChanged";
 
-import Contract from "web3/eth/contract";
-import {Tx as TransactionConfig, Tx as SendOptions} from "web3/eth/types";
+import {Contract} from "web3-eth-contract";
+import {TransactionConfig, TransactionConfig as SendOptions} from "web3-core";
 
 import { bindNestedAll, isDefined, CivilErrors } from "@joincivil/utils";
 import * as Debug from "debug";
